# irp

./: .gitignore  HUONG_DAN.md  README.md  app.py  export_instances.py  pyproject.toml  requirements.txt  test_feasibility.py
backend/: __init__.py  job_manager.py  kafka_bridge.py  main.py  monitor_context.py  realtime.py  telemetry_alert_worker.py  traffic_ingest.py  traffic_state.py
config/: traffic_mock.json
docs/: decuong.tex  dynamic_traffic_research.md  ft.md  monitor.md  rt.md  tracklist.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AlertFeed.jsx  ConvergenceChart.jsx  KpiCards.jsx  MonitoringView.jsx  ResultDetailPanel.jsx  RouteMap.jsx  (+3 more)
results/C_L_n100_seed123/: convergence.csv  map.html  metrics.txt  result.json
scripts/: e2e_product.py  run_e2e_product.sh
src/: __init__.py  main.py
src/baselines/: __init__.py  periodic.py  rmi.py
src/core/: __init__.py  constants.py  instance.py  inventory.py  solution.py  traffic.py
src/data/: __init__.py  converter.py  distances.py  generator.py  upload_loader.py
src/experiments/: __init__.py  analysis.py  runner.py  visualize.py
src/messaging/: __init__.py  kafka_convergence.py
src/milp/: __init__.py  validator.py
src/simulation/: __init__.py  replan_subinstance.py  replay.py  route_geometry.py  schedule_metrics.py
src/solver/: __init__.py  chromosome.py  decode.py  fitness.py  hga.py  local_search.py  operators.py
tests/: test_e2e_stack.py  test_integration.py  test_inventory.py  test_traffic.py
(+121 files in other folders)
